--- a/vhdl_ls.toml
+++ b/vhdl_ls.toml
@@ -2,11 +2,9 @@
 # vhdl_ls.toml file and supports glob-style patterns.
 [libraries]
 lib2.files = [
-    '../src/**/*.vhd',
-    #'src_tb/**/*.vhd',
-    'src_qtb/**/*.vhd'
+    'src/**/*.vhd',
+    'qualification_tb/src_qtb/**/*.vhd'
 ]
 vunit_lib.files = [
-    #'C:\Users\Michael.Grill\AppData\Local\Programs\Python\Python39\Lib\site-packages\vunit\vhdl/**/*.vhd',
     'C:\Users\Andreas.Schroeder\AppData\Local\Programs\Python\Python39\Lib\site-packages\vunit\vhdl/**/*.vhd'
 ]
